--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,16 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+            <version>2.2.5.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>net.sourceforge.javydreamercsw</groupId>
+            <artifactId>MySQL-Driver</artifactId>
+            <version>0.1</version>
+        </dependency>
+        <dependency>
             <groupId>com.springboot.app.commons</groupId>
             <artifactId>demo</artifactId>
             <version>0.0.1-SNAPSHOT</version>
